--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "babel-preset-stage-0": "6.5.0",
     "express": "4.13.3",
     "fs": "0.0.2",
-    "redis": "^2.6.3"
+    "redis": "^2.6.3",
+    "uuid": "^3.0.1"
   },
   "scripts": {
     "start": "babel-node server.js"
