--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-es2015": "6.14.0",
     "babel-preset-stage-0": "6.5.0",
     "express": "4.13.3",
+    "express-redis-cache": "^0.5.0",
     "fs": "0.0.2",
     "redis": "^2.6.3",
     "uuid": "^3.0.1"
