--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
+    "react-router-scroll": "^0.4.1",
     "redux": "^3.6.0",
     "redux-promise": "^0.5.3"
   },
